--- a/src/stories/stories.css
+++ b/src/stories/stories.css
@@ -77,3 +77,29 @@
   right: -55px;
   
 }
+.no-stories{
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  
+}
+#no-img{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: seashell;
+  width: 60px;
+  height: 60px;
+  border: 3px solid #FCD80C;
+  background-color: rgb(51, 51, 46);
+  border-radius: 50%;
+  text-decoration: none;
+
+}
+@media only screen and (max-width: 410px) {
+  .no-stories{
+    align-items: center;
+  }
+
+}
