--- a/src/stories/storyview.css
+++ b/src/stories/storyview.css
@@ -21,7 +21,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 10px;
+  margin: 20px 10px;
   width: 80%;
   border: 3px solid #FCD80C;
   transform: translateY(-3rem);
@@ -49,6 +49,7 @@
     width: 30px;
     position: absolute;
 }
+
 @media only screen and (max-width: 795px) {
     .story-time{
         font-size: 10px;
